Added open-source link in the buttom

--- a/index.html
+++ b/index.html
@@ -161,6 +161,10 @@
       <br />
       <p class="coder">Coded by Katerina Orrava</p>
     </div>
+    <p>
+      <a href="https://github.com/KateRiinaO/Weather-App">Open-source code</a>
+      by Katerina Orrava
+    </p>
     <script src="script/script.js"></script>
   </body>
 </html>
